Update usage of deprecated Thread.getId() to Thread.threadId()